--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <title>flex test</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a>Home</a></li>
+            <li><a>About</a></li>
+            <li><a>Works</a></li>
+            <li><a>Contact</a></li>
+        </ul>
+    </header>
     
 </body>
 </html>
