html main added

--- a/index.html
+++ b/index.html
@@ -10,12 +10,19 @@
 <body>
     <header>
         <ul>
-            <li><a>Home</a></li>
-            <li><a>About</a></li>
-            <li><a>Works</a></li>
-            <li><a>Contact</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Works</a></li>
+            <li><a href="#">Contact</a></li>
         </ul>
     </header>
-    
+    <div class="container">
+        <div class="about-left">
+            <p>blah blah blah</p>
+        </div>
+        <div class="about-right">
+            <p>blah blah blah blah</p>
+        </div>
+    </div>
 </body>
 </html>
