--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
             <p>blah blah blah blah</p>
         </div>
     </div>
+    <footer>
+        <p>hehehe</p>
+    </footer>
 </body>
 </html>
